// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`claim offer store action: ADD_SERIALIZED_CLAIM_OFFER 1`] = `
Object {
  "usd123": Object {
    "attributes": Array [
      Object {
        "address1": "address1",
        "address2": "address2",
      },
    ],
    "claimId": "claimUUID",
    "claimRequestStatus": "CLAIM_REQUEST_FAIL",
    "colorTheme": "#86B93B",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issueDate": 123456789,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "FAILED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {
    "pairwiseIdentifier1": Object {
      "usd123": Object {
        "messageId": "usd123",
        "serialized": "{}",
        "state": 1,
      },
    },
  },
}
`;

exports[`claim offer store action: CLAIM_OFFER_SHOW_START 1`] = `
Object {
  "usd123": Object {
    "attributes": Array [
      Object {
        "address1": "address1",
        "address2": "address2",
      },
    ],
    "claimId": "claimUUID",
    "claimRequestStatus": "NONE",
    "colorTheme": "#86B93B",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issueDate": 123456789,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "RECEIVED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {
    "pairwiseIdentifier1": Object {
      "usd123": Object {
        "messageId": "usd123",
        "serialized": "{}",
        "state": 1,
      },
    },
  },
}
`;

exports[`claim offer store action: HYDRATE_CLAIM_OFFERS_SUCCESS 1`] = `
Object {
  "pairwiseIdentifier1": Object {
    "uid": "{}",
  },
}
`;

exports[`claim offer store action: RESET_CLAIM_REQUEST_STATUS 1`] = `
Object {
  "usd123": Object {
    "attributes": Array [
      Object {
        "address1": "address1",
        "address2": "address2",
      },
    ],
    "claimId": "claimUUID",
    "claimRequestStatus": "NONE",
    "colorTheme": "#86B93B",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issueDate": 123456789,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "RECEIVED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {
    "pairwiseIdentifier1": Object {
      "usd123": Object {
        "messageId": "usd123",
        "serialized": "{}",
        "state": 1,
      },
    },
  },
}
`;

exports[`claim offer store claim offer is accepted 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is ignored 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "IGNORED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is received 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "RECEIVED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is rejected 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "REJECTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim offer is shown 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "NONE",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "SHOWN",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim request is fail 1`] = `
Object {
  "usd123": Object {
    "attributes": Array [
      Object {
        "address1": "address1",
        "address2": "address2",
      },
    ],
    "claimId": "claimUUID",
    "claimRequestStatus": "CLAIM_REQUEST_FAIL",
    "colorTheme": "#86B93B",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issueDate": 123456789,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "FAILED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim request is sent 1`] = `
Object {
  "usd123": Object {
    "claimRequestStatus": "SENDING_CLAIM_REQUEST",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ACCEPTED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store claim request is success 1`] = `
Object {
  "usd123": Object {
    "attributes": Array [
      Object {
        "address1": "address1",
        "address2": "address2",
      },
    ],
    "claimId": "claimUUID",
    "claimRequestStatus": "CLAIM_REQUEST_SUCCESS",
    "colorTheme": "#86B93B",
    "data": Object {
      "claimDefinitionSchemaSequenceNumber": 36,
      "name": "Home Address",
      "revealedAttributes": Array [
        Object {
          "data": "Address Address Address",
          "label": "Address 1",
        },
        Object {
          "data": "Address 2 Address 2 Address 2",
          "label": "Address 2",
        },
      ],
      "version": "1.0.0",
    },
    "error": null,
    "issueDate": 123456789,
    "issuer": Object {
      "did": "issuerDid",
      "name": "Test Issuer",
    },
    "remotePairwiseDID": "ha66899sadfjZJGINKN0770",
    "senderLogoUrl": "http://testissuer.com/logoUrl.png",
    "status": "ISSUED",
    "statusMsg": "pending",
    "uid": "usd123",
  },
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store should correctly calculate initial state 1`] = `
Object {
  "vcxSerializedClaimOffers": Object {},
}
`;

exports[`claim offer store should reset claim offer store, if RESET action is raised 1`] = `
Object {
  "vcxSerializedClaimOffers": Object {},
}
`;
